--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -16,3 +16,11 @@
     object-fit: contain;
   }
 }
+
+.product-detail {
+  &__image {
+    width: 100%;
+    height: 150px;
+    object-fit: contain;
+  }
+}
